// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Code /> Renders Code elements with language 1`] = `
<div>
  <div
    class="overflow-auto relative p-16"
    data-testid="code-block"
    lang="ruby"
  >
    <code
      class="p-32 language-ruby"
      style="white-space: pre-wrap;"
    >
      channel 
      <span
        class="token operator"
      >
        =
      </span>
       ably
      <span
        class="token punctuation"
      >
        .
      </span>
      channels
      <span
        class="token punctuation"
      >
        .
      </span>
      get
      <span
        class="token punctuation"
      >
        (
      </span>
      <span
        class="token string-literal"
      >
        <span
          class="token string"
        >
          'quickstart'
        </span>
      </span>
      <span
        class="token punctuation"
      >
        )
      </span>
      
channel
      <span
        class="token punctuation"
      >
        .
      </span>
      publish 
      <span
        class="token string-literal"
      >
        <span
          class="token string"
        >
          'greeting'
        </span>
      </span>
      <span
        class="token punctuation"
      >
        ,
      </span>
       
      <span
        class="token string-literal"
      >
        <span
          class="token string"
        >
          'hello!'
        </span>
      </span>
    </code>
  </div>
  <div
    class="absolute top-14 right-16"
  >
    <div
      class="relative"
    >
      <button
        class="button text-white"
        type="button"
      >
        <svg
          class="white "
          style="width: 1rem; height: 1rem;"
        >
          <use
            xlink:href="#sprite-icon-gui-copy"
          />
        </svg>
      </button>
      <div
        class="tooltipClass"
        role="tooltip"
      >
        <span>
          Copy
        </span>
      </div>
      <div
        class="notificationClass"
      >
        <span>
          Copied!
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Code /> Updates the codeblock when language is switched 1`] = `
<div
  class="overflow-auto relative p-16"
  data-testid="code-block"
  lang="ruby"
>
  <code
    class="p-32 language-ruby"
    style="white-space: pre-wrap;"
  >
    channel 
    <span
      class="token operator"
    >
      =
    </span>
     ably
    <span
      class="token punctuation"
    >
      .
    </span>
    channels
    <span
      class="token punctuation"
    >
      .
    </span>
    get
    <span
      class="token punctuation"
    >
      (
    </span>
    <span
      class="token string-literal"
    >
      <span
        class="token string"
      >
        'quickstart'
      </span>
    </span>
    <span
      class="token punctuation"
    >
      )
    </span>
    
channel
    <span
      class="token punctuation"
    >
      .
    </span>
    publish 
    <span
      class="token string-literal"
    >
      <span
        class="token string"
      >
        'greeting'
      </span>
    </span>
    <span
      class="token punctuation"
    >
      ,
    </span>
     
    <span
      class="token string-literal"
    >
      <span
        class="token string"
      >
        'hello!'
      </span>
    </span>
  </code>
</div>
`;

exports[`<Code /> Updates the codeblock when language is switched 2`] = `
<div
  class="overflow-auto relative p-16"
  data-testid="code-block"
  lang="sh"
>
  <code
    class="p-32 language-plaintext"
    style="white-space: pre-wrap;"
  >
    channel &lt;span class="token operator"&gt;=&lt;/span&gt; ably&lt;span class="token punctuation"&gt;.&lt;/span&gt;channels&lt;span class="token punctuation"&gt;.&lt;/span&gt;get&lt;span class="token punctuation"&gt;(&lt;/span&gt;&lt;span class="token string-literal"&gt;&lt;span class="token string"&gt;'quickstart'&lt;/span&gt;&lt;/span&gt;&lt;span class="token punctuation"&gt;)&lt;/span&gt;
channel&lt;span class="token punctuation"&gt;.&lt;/span&gt;publish &lt;span class="token string-literal"&gt;&lt;span class="token string"&gt;'greeting'&lt;/span&gt;&lt;/span&gt;&lt;span class="token punctuation"&gt;,&lt;/span&gt; &lt;span class="token string-literal"&gt;&lt;span class="token string"&gt;'hello!'&lt;/span&gt;&lt;/span&gt;
  </code>
</div>
`;
